# Vicord

./: Cargo.toml
src/: main.rs
